--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Component Library from AngelServers",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AngelServers/compas.git"
+  },
+  "scripts": {
+    "build": "esbuild ./strapi/main.js --bundle --outfile=strapi/index.js"
   },
   "author": "AngelServers, Angel Zimmermann",
   "license": "SEE LICENCE IN LICENCE",
@@ -20,5 +20,8 @@
     "framework7": "^8.3.0",
     "framework7-react": "^8.3.0",
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "esbuild": "0.19.11"
   }
 }
