--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/AngelServers/compas.git"
   },
   "scripts": {
-    "build": "esbuild ./strapi/main.js --bundle --outfile=strapi/index.js"
+    "build": "esbuild ./strapi/main.js --bundle --platform=node --target=node10.4 --outfile=strapi/index.js"
   },
   "author": "AngelServers, Angel Zimmermann",
   "license": "SEE LICENCE IN LICENCE",
