--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "AngelServers, Angel Zimmermann",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild ./strapi/main.js --bundle --platform=node --target=node10.4 --outfile=strapi/index.js"
+    "build": "esbuild ./strapi/main.js --bundle --platform=node --target=node10.4 --outfile=strapi/index.js",
+    "types": "tsc ./src/**/*.tsx --declaration --allowJs --emitDeclarationOnly --outDir types-folder"
   },
   "dependencies": {
     "@types/react": "^18.2.64",
