--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@types/react": "^18.2.64",
     "framework7": "^7.0.7",
     "framework7-react": "^7.0.7",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "esbuild": "0.19.11"
